fix: layout on small phone

--- a/src/app/common/kng-news/kng-news.component.scss
+++ b/src/app/common/kng-news/kng-news.component.scss
@@ -32,7 +32,7 @@
   .k-brand{
     position: absolute;
     left: 20px;
-    bottom: 20px;
+    bottom: 10px;
     font-size: 11px;
     z-index: 100;
     opacity: .5;
@@ -79,7 +79,7 @@
     overflow-y: auto;
     height: max-content;
     @media (max-width: 769px) {
-      height: calc(100vh - 2 * 170px );
+      height: calc(100vh - 2 * 130px );
     }
   
   }
@@ -90,14 +90,14 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    padding-top: 20px;
+    padding-top: 15px;
     border-top: 1px solid #eee;
     padding-bottom: 20px;
 
     button{        
       width: 100%;
       max-width: 400px;
-      padding: 18px 10px;
+      padding: 16px 10px;
       border-radius: 10px;
       margin: auto;
       margin-bottom: 10px;
@@ -132,6 +132,8 @@
     @media (max-width:1024px){
       padding: 10px 10px;
       width: calc( 100% - 20px );
+      padding-top: 0;
+      margin-top: 0;      
     }
 
 
